# trip-duration-repo

./: .gitignore  Makefile  README.md  app.py  dvc.yaml  mlflow.db  models.dvc  params.yaml  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
mlruns/0/models/m-a0badbc2c8bd4996aff2b8225779c906/artifacts/: MLmodel  conda.yaml  model.ubj  python_env.yaml
models/: model.joblib
trip_duration/: __init__.py  build_features.py  dataset.py  feature_definitions.py  plots.py
trip_duration/modeling/: predict.py  train_model.py
