[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "trip_duration"
version = "0.0.1"
description = "This is a project about predicting New York City's taxi's Trip durnation."
authors = [
  { name = "Badal Singh" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["trip_duration"]
include = ["pyproject.toml", "trip_duration/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["trip_duration"]
force-sort-within-sections = true

